tests/fixtures/invalid/pow_dict_str_bytes.py
# Cannot call pow() with Dict[str, int], Str, Bytes
x = pow({"a": 1}, "hello", b"hello")
